
* 3.2.13 *

* Test TinyTDS 0.6.0.
* Fixed the unit tests due to changes in ActiveRecord that removes blank config values.
* Fixed explain tests that were failing due to changes in ExplainSubscriber, cause was regex
* Fixed change_column to update existing table column rows with new default value if there are any NULL values
  and the column does not accept nulls
* Fixed change_column to drop and add indexes if the colun type is changes
* Fixed string_to_binary and binary_to_string in some cases where the binary data is not UTF-8
* Fixing generating profile report to create output dir if needed, and code change for printing report
* Adding ruby-prof to Gemfile, needed when running profile test cases
* Updating mocha to work with newer ActiveRecord test cases


* 3.2.10 *

* Remove connection defaults for host/username/password. Since we want to suppoert Windows Authentication
  and there are just to many possibilities. So we now have to be explicit.
* Remove really old TinyTDS warning.


* 3.2.9 *

* The #remove_default_constraint uses #execute_procedure now. Fixes #223. Thanks @gicappa and @clintmiller.
* Mimic other adapters quoting for empty strings passed to integer columns. Fixes #164.
* Allow named parameters in stored procedures. Fixes #216. Thanks @sixfeetover.
* Make sure exclude [__rnt] table names form relation reflection. Fixes #219 and #221. Thanks @sphogan.


* 3.2.8 *

* Include VERSION in gemspec's files.


* 3.2.7 *

* Find VERSION in base file out of module namespace. Fixes #208
* Better support for explain without sp_execute args. FIxes #207


* 3.2.6 *

* Unique has_many associations with pagination now work. Fixes #209


* 3.2.5 *

* Fix a few test from ActiveRecord 3.2.6 upgrade.

* Fix db_name usage bug in #column_definitions [Altonymous]


* 3.2.4 *

* Fixed schema reflection for identity columns using ODBC. Fixes #193.


* 3.2.3 *

* Fixed datetime quoting for ActiveSupport::TimeWithZone objects. Fixes #187 and #189.


* 3.2.2 *
