@@ -12,12 +12,13 @@ $:.unshift ACTIVERECORD_TEST_ROOT
 require 'rubygems'
 require 'bundler'
 Bundler.setup
-require 'shoulda'
-require 'mocha/setup'
+require 'mocha/api'
 require 'active_support/dependencies'
 require 'active_record'
 require 'active_record/version'
 require 'active_record/connection_adapters/abstract_adapter'
+require 'minitest-spec-rails'
+require 'minitest-spec-rails/init/mini_shoulda'
 require 'cases/helper'
 require 'models/topic'
 
